Fix resizing "New label" * wraping stars / rate value for mobiles * add Background color to item (smoke white)

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,9 +1,5 @@
 @media only screen and (max-width: 760px) {
-    .item { 
-        width: 90vw; /** Fit width of item to 90% of view width for mobiles **/
-        margin-left: 8px;
-        margin-right: 8px;
-    }
+    .item { width: 90vw; } /** Fit width of item to 90% of view width for mobiles **/
 
     body { line-height: 0.9; }
 }
